# mem_tool

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: cli.rs  main.rs  utils.rs
